@@ -1,7 +1,8 @@
 2012-07-19
 
-	* src/b64.[ch], src/proto.c: Clean up the previous b64 patch
-	and apply it to all places where otrl_base64_decode() is called.
+	* src/b64.[ch], src/proto.c, toolkir/parse.c: Clean up the
+	previous b64 patch and apply it to all places where
+	otrl_base64_decode() is called.
 
 2012-07-17
 
